Forgot to save ¯\_(ツ)_/¯

--- a/doc/UserGuide.tex
+++ b/doc/UserGuide.tex
@@ -187,9 +187,10 @@ Make sure you started the program according to section \ref{sec:software_start}.
 	\subsubsection{Starting a program}
 \begin{enumerate}
 \setcounter{enumi}{\value{ListCounter}}
+\item Check if the refresh ratios are still there and valid
 \item Hit the \textbf{Run Program} button
 \item Select the previously created \textit{program.xml} file and hit \textbf{Load}
 \item Check if all values and steps are correct
-\item Start the program via the \textbf{Start} button
+\item Start the continuous loop via the \textbf{Start} button
 \end{enumerate}
 \end{document}
