Updated step by step manual

--- a/doc/UserGuide.tex
+++ b/doc/UserGuide.tex
@@ -66,7 +66,9 @@
 
 
 \subsection{Operating a Multiring chip}
-Make sure you started the program according to section \ref{sec:software_start}.
+Make sure you started the program according to section \ref{sec:software_start}.\\
+A general remark: You can capture and modify the positions as well as the microscope lists with the buttons in their proximity. To select a specific configuration, double click on the desired row. A single click will only select the row for a modification by \textbf{Replace} or \textbf{Clear Selected}. 
+
 	\subsubsection{Initalization}
 	\begin{enumerate}
 	\item Start the Elveflow device and the \textbf{ESI} software
