Reviewed Program Creation Procedure. Facilitated it.

--- a/doc/UserGuide.tex
+++ b/doc/UserGuide.tex
@@ -30,10 +30,16 @@
 \section{User Guide}
 
 \subsection{Prequisites}
+\subsubsection*{What NOT to do}
 \begin{itemize}
 	\item	The program is not very fast. In case something does not happen instantly, be patient and try to avoid clicking multiple times. This mostly results in unpredictable behavior.
 	\item	If the software is not already installed on the computer, refer to the README.md file.
 	
+\end{itemize}
+
+Some general things 
+\begin{itemize}
+	\item 
 \end{itemize}
 
 
@@ -168,7 +174,7 @@ A general remark: You can capture and modify the positions as well as the micros
 	\subitem Repeat it for every color you want to acquire
 	\item \textbf{Save List} with the suffix \textit{.xml} (preferably) at the same location as the positions
 	\item Make sure that the Refresh Ratios are set correctly. This is crucial for any further step!
-	\subitem If you want to change the Refresh Ratios, you can either doubleclick into the respective ratio and change it or hit the \textbf{Input Refresh Ratios} to input all ratios again.
+	\subitem If you want to change the Refresh Ratios, you can either double click into the respective ratio and change it or hit the \textbf{Input Refresh Ratios} to input all ratios again.
 	\item Start the \textbf{Program Setup}
 	\item If you wish to modify a previously created program, click on \textbf{Load Old Program}
 	\item Select the previouly created \textit{Microscope} and \textit{Position Settings} by clicking the \textbf{Folder Symbol}
